welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:32: error: ';' expected but 'return' found.
			}return true
                         ^ZigZag:41: error: ';' expected but 'return' found.
			} return true
                          ^